--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Title</h1>
+    <div class="main-header">
+        <img src="images/CTHS-logo.png" alt="CTHS-logo" style="width: 20%;">
+        <h1>Our Partners</h1>
+    </div>
+    
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla in eaque voluptatibus provident quae. Non error quam dolores. Sequi reprehenderit nam molestias, perspiciatis nobis sapiente harum? Impedit atque maiores commodi!</p>
 </body>
